# mandala

./: .gitignore  CLAUDE.md  CODE_CONVENTIONS.md  CONCEPTS.md  Cargo.toml  README.md  REFACTOR_PLAN.md  SECTIONS_BORDERS_RESIZE_PLAN.md  SECTION_INTEGRATION_PLAN.md  TEST_CONVENTIONS.md  TODO.md  Trunk.toml  WASM_CONVERGENCE.md  agent-skills.config  run.sh  rustfmt.toml
benches/: _template.rs
format/: README.md  animation-roadmap.md  border-patterns.md  canvas.md  fonts.md  ipc.md  macros.md  migration.md  mutations.md  schema.md  sections.md  text-runs.md  validation.md
lib/baumhard/: CONVENTIONS.md  Cargo.toml  build.rs  readme.md
lib/baumhard/benches/: _template.rs  test_bench.rs
lib/baumhard/src/: lib.rs
lib/baumhard/src/core/: animation.rs  mod.rs  primitives.rs
lib/baumhard/src/core/tests/: mod.rs  primitives_tests.rs
lib/baumhard/src/font/: attrs.rs  color.rs  fonts.rs  hex.rs  metric_cache.rs  metrics.rs  mod.rs
lib/baumhard/src/font/tests/: attrs_tests.rs  fonts_tests.rs  hex_tests.rs  metrics_tests.rs  mod.rs
lib/baumhard/src/format/: json.rs  mod.rs
lib/baumhard/src/gfx_structs/: area.rs  area_fields.rs  area_mutators.rs  camera.rs  element.rs  mod.rs  mutator.rs  predicate.rs  scene.rs  shape.rs  tree.rs  tree_walker.rs  zoom_visibility.rs
lib/baumhard/src/gfx_structs/model/: component.rs  glyph_model.rs  line.rs  matrix.rs  mod.rs  mutator.rs
lib/baumhard/src/gfx_structs/tests/: area_tests.rs  bvh_descent_tests.rs  camera_tests.rs  element_tests.rs  fixtures.rs  map_children_tests.rs  mod.rs  model_tests.rs  mutator_tests.rs  predicate_tests.rs  region_indexer_tests.rs  region_params_tests.rs  region_rect_tests.rs  scene_tests.rs  shape_tests.rs  spatial_descend_tests.rs  subtree_aabb_tests.rs  tree_tests.rs  tree_walker_tests.rs  zoom_visibility_tests.rs
lib/baumhard/src/gfx_structs/util/: hitbox.rs  mod.rs  region_indexer.rs  regions.rs
lib/baumhard/src/mindmap/: animation.rs  border.rs  border_pattern.rs  border_tests.rs  loader.rs  mod.rs  portal_geometry.rs  scene_cache.rs  test_helpers.rs
lib/baumhard/src/mindmap/connection/: bezier.rs  mod.rs  tests.rs
lib/baumhard/src/mindmap/custom_mutation/: contexts.rs  mod.rs  scope.rs  serialized.rs  tests.rs
lib/baumhard/src/mindmap/model/: canvas.rs  edge.rs  mod.rs  node.rs  palette.rs  tests.rs  text_run_ops.rs  validate.rs
lib/baumhard/src/mindmap/scene_builder/: builder.rs  connection.rs  edge_handle.rs  label.rs  mod.rs  node_pass.rs  node_resize_handle.rs  portal.rs  section_frame.rs  section_resize_handle.rs
lib/baumhard/src/mindmap/scene_builder/tests/: cache.rs  clipping.rs  edge_handles.rs  fixtures.rs  labels.rs  mod.rs  node_edit.rs  point_inside.rs  portals.rs  section_frames.rs  sections.rs  themes.rs
lib/baumhard/src/mindmap/tree_builder/: border.rs  connection.rs  connection_label.rs  edge_handle.rs  handle.rs  mod.rs  node.rs  node_resize_handle.rs  portal.rs  section_frame.rs  section_resize_handle.rs
lib/baumhard/src/mindmap/tree_builder/tests/: border.rs  connection.rs  edge_handle.rs  fixtures.rs  mod.rs  node_background.rs  node_basic.rs  node_scale.rs  portal.rs  section_frame.rs  sections.rs
lib/baumhard/src/mutator_builder/: ast.rs  build.rs  context.rs  mod.rs
lib/baumhard/src/mutator_builder/tests/: mod.rs  mutator_builder_tests.rs
lib/baumhard/src/shaders/: mod.rs  shaders.rs
lib/baumhard/src/util/: arena_utils.rs  color.rs  color_conversion.rs  geometry.rs  grapheme_chad.rs  log.rs  mod.rs  ordered_vec2.rs  palettes.rs  primes.rs
lib/baumhard/src/util/tests/: arena_utils_tests.rs  color_tests.rs  geometry_tests.rs  grapheme_chad_tests.rs  mod.rs  ordered_vec2_tests.rs  primes_test.rs
lib/mandala_derive/: Cargo.toml
lib/mandala_derive/src/: lib.rs
(+382 files in other folders)
