[package]
name = "baumhard"
version = "0.1.0"
edition = "2021"
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
serde-lexpr = "0.1.3"
slab = "0.4.12"
lazy_static = "1.5.0"
syn = "2.0.117"
log = { version = "0.4.29", features = ["release_max_level_off"] }
env_logger = "0.11.10"
smol_str = "0.3.6"
indextree = {version = "4.8.1", features = ["serde"]}
glam = {version = "0.32.1", features = ["serde"]}
cosmic-text = "0.18.2"
tinyvec = "1.11.0"
unicode-segmentation = "1.13.2"
rustc-hash = "2.1.2"
strum = "0.28.0"
strum_macros = "0.28.0"
enumset = {version = "1.1.10", features = ["serde"]}
ordered-float = {version = "5.3.0", features = ["serde"]}
crossbeam-channel = "0.5.15"
derivative = "2.2.0"

[build-dependencies]
walkdir = "2.5.0"
path-slash = "0.2.1"
ttf-parser = "0.25.1"
regex = "1.12.3"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "test_bench"
harness = false
