[package]
name = "mandala_derive"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
# Default features (`derive`, `parsing`, `printing`, `clone-impls`,
# `proc-macro`) are sufficient — the macro never reaches into syn's
# expression / statement / item parsers, which is what `["full"]`
# adds. Default-only halves syn's compile cost for this crate.
syn = "2.0.117"
quote = "1.0.41"
proc-macro2 = "1.0.103"
